Crash when baking with OptiX enabled 2.92 #84016

Closed
opened 2020-12-21 14:23:14 +01:00 by John · 7 comments

System Information
Operating system: Windows 10
Graphics card: 3080 460.89 gameready driver

Blender Version
Broken: blender-2.92.0-d283a093d664-windows64
Worked: Never
Short description of error
I think baking with optiX render device set is meant to bake using CUDA but instead it crashes blender

Exact steps for others to reproduce the error
Open default scene
Make sure render settings is set to optix gpu compute (crashes using supported or experimental)
Go to shader tab, add new image texture (left all settings default)
Click cube and hit bake

optix_bake.blend

blender.crash.txt

**System Information** Operating system: Windows 10 Graphics card: 3080 460.89 gameready driver **Blender Version** Broken: blender-2.92.0-d283a093d664-windows64 Worked: Never **Short description of error** I think baking with optiX render device set is meant to bake using CUDA but instead it crashes blender **Exact steps for others to reproduce the error** Open default scene Make sure render settings is set to optix gpu compute (crashes using supported or experimental) Go to shader tab, add new image texture (left all settings default) Click cube and hit bake [optix_bake.blend](https://archive.blender.org/developer/F9521917/optix_bake.blend) [blender.crash.txt](https://archive.blender.org/developer/F9521825/blender.crash.txt)
Author

Added subscriber: @Casper-4

Added subscriber: @Casper-4
Author

I should mention I have a 660ti as well, but I tried disabling this both in the cuda settings in blender before changing to optix and in device manager but it still crashed. Here is system info:

blender_system_info.txt

I should mention I have a 660ti as well, but I tried disabling this both in the cuda settings in blender before changing to optix and in device manager but it still crashed. Here is system info: [blender_system_info.txt](https://archive.blender.org/developer/F9521847/blender_system_info.txt)

Added subscribers: @pmoursnv, @rjg

Added subscribers: @pmoursnv, @rjg

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can't get this work in any version. I've attached an example file to the report. This even crashes when prior to the integration of OptiX for baking, where it should've switched to CUDA @pmoursnv.

I can't get this work in any version. I've attached an example file to the report. This even crashes when prior to the integration of OptiX for baking, where it should've switched to CUDA @pmoursnv.

This issue was referenced by c4f8aedbc2

This issue was referenced by c4f8aedbc2eb3f54e885ca4c86af6b405fd89c3f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-12-24 13:01:25 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84016
No description provided.