Fix T84016: Cycles baking crash with OptiX after recent changes

This worked for CPU + GPU, but not GPU only.